// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewCounter /> should not render without value 1`] = `""`;

exports[`<ProjectPreviewCounter /> should render correctly with value 1`] = `
<Tag>
  32
   
  <FormattedMessage
    id="test"
    values={
      Object {
        "num": 32,
      }
    }
  />
</Tag>
`;

exports[`<ProjectPreviewCounter /> should render render an icon with icon value 1`] = `
<Tag
  icon="cap cap-icon"
>
  1
   
  <FormattedMessage
    id="test"
    values={
      Object {
        "num": 1,
      }
    }
  />
</Tag>
`;

exports[`<ProjectPreviewCounter /> should render with showZero = true 1`] = `
<Tag>
  0
   
  <FormattedMessage
    id="test"
    values={
      Object {
        "num": 0,
      }
    }
  />
</Tag>
`;
